Put buttons for transaction and report generation